--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.7",
     "@types/express-session": "^1.17.0",
+    "@types/mongodb": "^3.5.25",
     "@types/morgan": "^1.9.1",
     "@types/passport": "^1.0.4",
     "body-parser": "1.15.0",
@@ -38,6 +39,7 @@
     "jsonwebtoken": "7.1.9",
     "method-override": "2.3.5",
     "methods": "1.1.2",
+    "mongodb": "^3.5.9",
     "mongoose": "4.4.10",
     "mongoose-unique-validator": "1.0.2",
     "morgan": "1.7.0",
