--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,6 @@
 {
-  "extends": "./node_modules/@cdimitroulas/typescript-scripts/.eslintrc.json"
+  "extends": "./node_modules/@cdimitroulas/typescript-scripts/.eslintrc.json",
+  "rules": {
+    "@typescript-eslint/ban-types": 0
+  }
 }
