--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "conduit-node",
   "version": "1.0.0",
   "description": "conduit on node",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
     "compile": "typescript-scripts compile --allowJs",
-    "lint": "typescript-scripts lint './**/*.[j|t]s'",
+    "lint": "typescript-scripts lint './src/**/*.ts'",
     "mongo:start": "docker run --name realworld-mongo -p 27017:27017 mongo & sleep 5",
     "start": "node ./app.js",
     "dev": "nodemon ./app.js",
     "test": "npm run compile -- --noEmit && npm run lint && npm run test:unit && npm run test:e2e",
-    "test:unit": "typescript-scripts test src/",
-    "test:unit:watch": "typescript-scripts test --watch src/",
+    "test:unit": "typescript-scripts test 'src//**/*.spec.ts'",
+    "test:unit:watch": "typescript-scripts test --watch 'src/**/*.spec.ts'",
     "test:e2e": "newman run ./tests/api-tests.postman.json -e ./tests/env-api-tests.postman.json",
     "stop": "lsof -ti :3000 | xargs kill",
     "mongo:stop": "docker stop realworld-mongo && docker rm realworld-mongo"
@@ -26,6 +26,7 @@
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.7",
     "@types/express-session": "^1.17.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.5.25",
     "@types/morgan": "^1.9.1",
     "@types/passport": "^1.0.4",
@@ -36,6 +37,7 @@
     "express": "4.13.4",
     "express-jwt": "3.3.0",
     "express-session": "1.13.0",
+    "fp-ts": "^2.7.1",
     "jsonwebtoken": "7.1.9",
     "method-override": "2.3.5",
     "methods": "1.1.2",
@@ -47,9 +49,13 @@
     "passport-local": "1.0.0",
     "request": "2.69.0",
     "slug": "0.9.1",
-    "underscore": "1.8.3"
+    "underscore": "1.8.3",
+    "validator": "^13.1.1"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.11",
+    "@types/validator": "^13.1.0",
+    "chai": "^4.2.0",
     "newman": "^3.8.2",
     "nodemon": "^1.11.0"
   }
