--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "nodemon ./app.js",
     "test": "npm run compile -- --noEmit && npm run lint && npm run test:unit && npm run test:e2e",
     "test:unit": "typescript-scripts test 'src//**/*.spec.ts'",
-    "test:unit:watch": "typescript-scripts test --watch 'src/**/*.spec.ts'",
+    "test:unit:watch": "typescript-scripts test --watch 'src/**/*.spec.ts' --reporter min",
     "test:e2e": "newman run ./tests/api-tests.postman.json -e ./tests/env-api-tests.postman.json",
     "stop": "lsof -ti :3000 | xargs kill",
     "mongo:stop": "docker stop realworld-mongo && docker rm realworld-mongo"
