--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/express": "^4.17.7",
     "@types/express-session": "^1.17.0",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/lodash.isplainobject": "^4.0.6",
     "@types/mongodb": "^3.5.25",
     "@types/morgan": "^1.9.1",
     "@types/passport": "^1.0.4",
@@ -39,6 +40,7 @@
     "express-session": "1.13.0",
     "fp-ts": "^2.7.1",
     "jsonwebtoken": "7.1.9",
+    "lodash.isplainobject": "^4.0.6",
     "method-override": "2.3.5",
     "methods": "1.1.2",
     "mongodb": "^3.5.9",
