--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "compile": "typescript-scripts compile --allowJs",
     "lint": "typescript-scripts lint './src/**/*.ts'",
-    "mongo:start": "docker run --name realworld-mongo -p 27017:27017 mongo & sleep 5",
+    "mongo:start": "docker run --name realworld-mongo -d -p 27017:27017 mongo & sleep 5",
     "start": "node ./app.js",
-    "dev": "nodemon ./app.js",
+    "dev": "NODE_ENV=development nodemon --exec 'typescript-scripts run src/application.ts' src/application.ts",
     "test": "npm run compile -- --noEmit && npm run lint && npm run test:unit && npm run test:e2e",
     "test:unit": "typescript-scripts test 'src//**/*.spec.ts'",
     "test:unit:watch": "typescript-scripts test --watch 'src/**/*.spec.ts' --reporter min",
