--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "compile": "typescript-scripts compile --allowJs",
     "lint": "typescript-scripts lint './src/**/*.ts'",
     "mongo:start": "docker run --name realworld-mongo -d -p 27017:27017 mongo & sleep 5",
-    "start": "node ./app.js",
+    "start": "typescript-scripts run ./src/application.ts",
     "dev": "NODE_ENV=development nodemon --exec 'typescript-scripts run src/application.ts' src/application.ts",
     "test": "npm run compile -- --noEmit && npm run lint && npm run test:unit && npm run test:e2e",
     "test:unit": "typescript-scripts test 'src//**/*.spec.ts'",
